--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_brown"
+    android:background="#E8302625"
     android:clickable="true">
 
     <Button
@@ -12,10 +12,10 @@
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_marginBottom="4dp"
-        android:backgroundTint="@color/light_brown"
+        android:backgroundTint="#C5AAAA"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-         android:text="Add To Cart"
+        android:text="Add To Cart"
         android:textAllCaps="false"
         android:textColor="@color/dark_brown"
         android:textSize="22sp"
@@ -36,21 +36,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/specific_corner_rounded" />
+
     <ImageView
         android:id="@+id/ivBack"
         android:layout_width="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginStart="8dp"
-        android:padding="8dp"
-        android:backgroundTint="@color/dark_brown"
-        android:background="@drawable/bg_round"
-        android:elevation="10dp"
         android:layout_marginTop="9dp"
+        android:background="@drawable/bg_round"
+        android:backgroundTint="@color/dark_brown"
+        android:elevation="10dp"
+        android:padding="8dp"
         android:src="@drawable/baseline_keyboard_backspace_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/white" />
+
     <TextView
         android:id="@+id/textViewName"
         android:layout_width="0dp"
@@ -173,10 +175,17 @@
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="47dp"
-        android:background="#FFEB3B"
+        android:scaleX="0.6"
+        android:scaleY="0.6"
+        android:background="@android:color/transparent"
+        android:backgroundTint="#E8302625"
+        android:backgroundTintMode="src_atop"
+        android:isIndicator="true"
+        android:progressBackgroundTintMode="src_atop"
         app:layout_constraintBottom_toBottomOf="@+id/textViewName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textViewName" />
+        app:layout_constraintTop_toTopOf="@+id/textViewName"
+        app:layout_constraintVertical_bias="0.466" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
