--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="yellow">#BF6B312D</color>
     <color name="brown">#BF6B312D</color>
 
+    <color name="color_primary">#713530</color>
 
     <color name="placed">#2196F3</color>
     <color name="confirmed">#3F51B5</color>
