--- a/app/src/main/res/layout/activity_orderdetails.xml
+++ b/app/src/main/res/layout/activity_orderdetails.xml
@@ -78,6 +78,33 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/tvUserName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="11dp"
+                 android:visibility="gone"
+                android:textAllCaps="true"
+                android:textColor="#252525"
+                app:layout_constraintEnd_toStartOf="@+id/textView2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvUserEmail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="11dp"
+                android:visibility="gone"
+                 android:textAllCaps="true"
+                android:textColor="#252525"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toStartOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvUserName" />
+
+            <TextView
                 android:id="@+id/login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -87,7 +114,7 @@
                 android:textAllCaps="true"
                 android:textColor="#252525"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tvUserEmail" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -131,7 +158,7 @@
                 android:background="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textView4"
+                app:layout_constraintTop_toBottomOf="@id/textView3"
                 app:tabIndicatorColor="@color/light_brown"
                 app:tabSelectedTextColor="@color/dark_brown"
                 app:tabTextColor="@color/black">
