--- a/app/src/main/res/layout/fragment_coffee_cakes.xml
+++ b/app/src/main/res/layout/fragment_coffee_cakes.xml
@@ -31,13 +31,13 @@
 
     <ImageView
         android:id="@+id/ivLogout"
-        android:padding="5dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignTop="@+id/showCakeButton"
         android:layout_alignBottom="@+id/showCakeButton"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="6dp"
+        android:padding="5dp"
         android:src="@drawable/baseline_logout_24"
         app:tint="@color/dark_brown" />
 
@@ -49,4 +49,14 @@
         android:layout_marginTop="16dp"
         tools:listitem="@layout/coffee_layout" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_baseline_add"
+        app:backgroundTint="@color/color_primary"
+        app:tint="@color/white" />
 </RelativeLayout>
